Updated how to play

--- a/static/Credits.html
+++ b/static/Credits.html
@@ -154,7 +154,8 @@ var url = window.location.href.search("t=") + 2;
             music.play();
         });
 </script>
-<p style="position: absolute; top: 10%; left: 44%; color: #ffffff; text-align: center;">[GAME DEVELOPERS]<br/>---------------------------------<br/>Nathan Sturgeon<br/>Conner Cullity<br><br>[GAME ART]<br/>------------------------<br/>Aidan Dilling<br/>Nathan Sturgeon<br/><br>[VOICE ACTORS]<br/>------------------------<br/>Taggart Henderson<br/><br>[HELPERS]<br/>--------------------------------<br/>David Hoare<br/>Spenecer Jones</p>
+<p style="position: absolute; top: 2%; left: 34.5%; color: #ffffff; text-align: center;">A SPEACIL THANKS TO UBISOFT AND RAINBOW 6 SIEGE</p>
+<p style="position: absolute; top: 10%; left: 44%; color: #ffffff; text-align: center;">[GAME DEVELOPERS]<br/>---------------------------------<br/>Nathan Sturgeon<br/>Conner Cullity<br><br>[GAME ART]<br/>------------------------<br/>Aidan Dilling<br/>Nathan Sturgeon<br/><br>[WRITERS]<br/>------------------------<br/>Connor Tropp<br/><br>[VOICE ACTORS]<br/>------------------------<br/>Taggart Henderson<br/><br>[HELPERS]<br/>--------------------------------<br/>David Hoare<br/>Spenecer Jones</p>
 <a onclick="window.location.href = '/?t=' + music.currentTime">
 <button style="position: absolute; top: 80%; left: 50%; margin-left: -5%; width: 10%; color:#ffffff;">Return</button>
 </a>
