--- a/static/HowToPlay.html
+++ b/static/HowToPlay.html
@@ -91,6 +91,15 @@ input[type=text], input[type=password] {
 }
 
 
+.ShootPurple {
+  position: absolute; width: 35px; height: 35px; background-color: rgba(108,61,255,0.6);
+}
+.AimPink {
+  position: absolute; width: 35px; height: 35px; background-color: rgba(240,61,255,0.6);
+}
+.SprintRed {
+  position: absolute; width: 45px; height: 35px; background-color: rgba(255,50,50,0.6);
+}
 .ReloadGreen {
   position: absolute; width: 35px; height: 35px; background-color: rgba(10,255,90,0.6);
 }
@@ -171,6 +180,7 @@ span.psw {
 <img style=" position: absolute; top: 52%; left: 30.5%; width: 7%; height: 16%;" src="Keys/MouseRight.png"> -->
 
 <img style=" position: absolute; z-index: 5; top: 50%; left: 50%; margin-left: -300px; margin-top:-107.5px; width: 600px; height: 215px;" src="Keys/KeyBoard.png">
+<img style=" position: absolute; z-index: 5; top: 50%; left: 80%; margin-left: -67.5px; margin-top:-91px; width: 135px; height: 182px;" src="Keys/Mouse.png">
 <!-- Key U <div class="MovementBlue" style="top: 41.5%; left: 50%;"></div>
  Key R <div class="MovementBlue" style="top: 41.5%; left: 41.6%;"></div>
 Key E ><div class="MovementBlue" style="top: 41.5%; left: 38.8%;"></div>-->
@@ -181,13 +191,23 @@ Key E ><div class="MovementBlue" style="top: 41.5%; left: 38.8%;"></div>-->
 <div class="WeapomSwitchPrim" style="left: 31.6%; top: 35.7%;"></div>
 <div class="WeapomSwitchSeco" style="left: 34.6%; top: 35.7%;"></div>
 <div class="ReloadGreen" style="left: 41.6%; top: 41.5%;"></div>
+<div class="SprintRed" style="left: 29%; top: 53%;"></div>
 
 
-
-<div class="MovementBlue" style="left: 30%; top: 10%;"></div>
-<div class="WeapomSwitchPrim" style="left: 36%; top: 10%;"></div>
-<div class="WeapomSwitchSeco" style="left: 40%; top: 10%;"></div>
-<div class="ReloadGreen" style="left: 46%; top: 10%;"></div>
+<p style=" position: absolute; left: 5%; top: 5%;">Movement</p>
+<div class="MovementBlue" style="left: 5%; top: 10%;"></div>
+<p style=" position: absolute; left: 5%; top: 25%;">Primary Weapon</p>
+<div class="WeapomSwitchPrim" style="left: 5%; top: 30%;"></div>
+<p style=" position: absolute; left: 5%; top: 35%;">Secondary Weapon</p>
+<div class="WeapomSwitchSeco" style="left: 5%; top: 40%;"></div>
+<p style=" position: absolute; left: 5%; top: 15%;">Reload</p>
+<div class="ReloadGreen" style="left: 5%; top: 20%;"></div>
+<p style=" position: absolute; left: 5%; top: 45%;">Sprint</p>
+<div class="SprintRed" style="left: 5%; top: 50%;"></div>
+<p style=" position: absolute; left: 5%; top: 55%;">Shoot</p>
+<div class="ShootPurple" style="left: 5%; top: 60%;"></div>
+<p style=" position: absolute; left: 5%; top: 65%;">Aim</p>
+<div class="AimPink" style="left: 5%; top: 70%;"></div>
 
 
 <!-- Key Q <div class="MovementBlue" style="top: 41.5%; left: 33%;"></div>-->
