--- a/static/index.html
+++ b/static/index.html
@@ -24,6 +24,14 @@
 
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-2369077481942587",
+        enable_page_level_ads: true
+      });
+    </script>
+
 <picture>
   <source media="(min-width: 650px)" srcset="MenuTextures/SiegeXY.png">
   <img  style="
