--- a/static/Barracks.html
+++ b/static/Barracks.html
@@ -19,7 +19,13 @@
 <meta name="theme-color" content="#ffffff">
       <title>Siege XY</title>
       <body background = "MenuTextures/Barracks.jpg" >
-
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-2369077481942587",
+            enable_page_level_ads: true
+          });
+        </script>
       <style>
       body {
         font-family: Arial, Helvetica, sans-serif;
