--- a/static/CasualAttacker.html
+++ b/static/CasualAttacker.html
@@ -18,6 +18,13 @@
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="GameIcons/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-2369077481942587",
+    enable_page_level_ads: true
+  });
+</script>
     <style>
 div#load_screen{
 	background: #000;
