--- a/static/TrainStation.html
+++ b/static/TrainStation.html
@@ -19,7 +19,7 @@
 <meta name="msapplication-TileImage" content="GameIcons/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
 <meta name="viewport" content= "width=device-width, user-scalable=no">
-
+<link href="main.css" rel="stylesheet"/>
       <script type="text/javascript" src="colyseus.js"></script>
 
     <style>
@@ -146,6 +146,19 @@ div#load_screen > div#loading{
             background-color: rgba(70,70,70,0.6);
             opacity: 0;
           }
+
+          .AmmoIcon {
+            position: absolute;
+            top: 70%;
+            left: 50%;
+            margin-left: -12.5%;
+            margin-top: -35%;
+            width: 25%;
+            height: 80%;
+            background-color: rgba(70,70,70,0.6);
+            border-radius: 25%;
+          }
+
           .squareblack {
             position: absolute;
             word-wrap: break-word;
@@ -185,29 +198,19 @@ div#load_screen > div#loading{
        top:75%;
        left:93%;
        opacity:0.7;
+       border-radius: 50%;
       }
-      #Healthbar{
-      background-color: #90EE90;
-      position: absolute;
-      pointer-events: none;
-      user-select:none;
-      margin-top: -70.5px;
-      margin-left: -15.5px;
-      width: 141px;
-      height: 31px;
-      top:14%;
-      left:7%;
-      }
-      #AmmoCounter{
-      position: absolute;
-      pointer-events: none;
-      user-select:none;
-      margin-top: -70.5px;
-      margin-left: -15.5px;
-      width: 141px;
-      height: 31px;
-      top:14%;
-      left:18%;
+      #playericon{
+       position: absolute;
+       pointer-events: none;
+       user-select:none;
+       margin-top: -25px;
+       margin-left: -25px;
+       width: 50px;
+       height: 50px;
+       top:90%;
+       left:17%;
+       opacity:1;
       }
       #AmmoAmmount{
       position: absolute;
@@ -217,8 +220,9 @@ div#load_screen > div#loading{
       margin-left: -15.5px;
       width: 141px;
       height: 31px;
-      top:15%;
-      left:23%;
+      top:100%;
+      left:11%;
+      color: white;
       font-family: arial;
       }
 
@@ -229,9 +233,14 @@ div#load_screen > div#loading{
         }
 
 
+
     </style>
   </head>
   <body>
+
+
+
+
     <div id="load_screen"><div id="loading" style=" z-index: 999;">Game Loading</div></div>
     <script src="Howler.js"></script>
       <div id="divGame">
@@ -242,6 +251,7 @@ div#load_screen > div#loading{
           <img id="ter3" class="terrorist" src="GameTextures/Terrorist1.png" style="position:absolute; left: 715px; top: 1410px;">
 
         </div>
+
       <svg id="walls" height="4000" width="4000">
               <rect class="collision" x="0" y="0" height="30" width="4000" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.0;"/>
               <rect class="collision" x="0" y="0" height="4000" width="30" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.0;"/>
@@ -374,11 +384,18 @@ div#load_screen > div#loading{
         <svg id="svgP" width="4000" height="4000">
             <rect id="playerCollision" x="975" y="465" width="35" height="35" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.0;"/>
         </svg>
-        <img id="AmmoCounter" src="GameTextures/AmmoCounterLong.png">
-        <p id="AmmoAmmount">30/120</p>
+        <script>
+        var url = window.location.href.search("op=") + 3;
+        var op = window.location.href.substr(url);
+        </script>
+        <!-- <div id="circle1"></div>
+        <div id="circle3"></div> -->
+        <!-- <p id="AmmoAmmount">30/120</p> -->
         <img id="minimap" src="GameTextures/Train Station33.png" alt="Minimap">
+        <img id="playericon" src="OperatorImages/Vial.png">
         <img class="player" id="PewDiePie" src="GameTextures/Op4Primary.png" onError="this.onerror=null;this.src='GameTextures/Op4Primary.png';" style="opacity:1.0;">
-        <progress id="Healthbar" value="100" max="100"></progress>
+          <canvas height="100" width="100" id="counter"></canvas>
+          <canvas height="100" width="100" id="AmmoCounter"></canvas>
     </div>
   </body>
 
@@ -396,7 +413,6 @@ div#load_screen > div#loading{
       <div class="container" style="background-color:#f1f1f1">
       </div>
   </div>
-  <script src="TrainStation.js" type="text/javascript"></script>
-
+  <script  src="TrainStation.js" type="text/javascript"></script>
 
 </html>
