--- a/static/TrainStation.html
+++ b/static/TrainStation.html
@@ -398,9 +398,20 @@ div#load_screen > div#loading{
         var url = window.location.href.search("op=") + 3;
         var op = window.location.href.substr(url);
         </script>
-        <!-- <div id="circle1"></div>
-        <div id="circle3"></div> -->
-        <!-- <p id="AmmoAmmount">30/120</p> -->
+        <script>
+        var time = 500;
+        var timer = setInterval(InGameTime,1000);
+
+       function InGameTime(){
+       if(time <= 1){
+       window.location.href = "index.html";
+       }
+       time = time -1;
+       console.log(time);
+       document.getElementById("InGameTimer").textContent=time;
+       }
+          </script>
+          <p id="InGameTimer" style=" pointer-events: none; user-select:none; position: absolute; top:5%; color: white; font-size: 55; left:50%; margin-top: -25px; margin-left: -25px;width: 50px;height: 50px; text-align: center;"></p>
         <div id="hud"></div>
         <img id="minimap" src="GameTextures/Train Station34.png" alt="Minimap">
         <img id="playericon" src="OperatorImages/Vial.png">
