--- a/static/index.html
+++ b/static/index.html
@@ -170,6 +170,7 @@ modal:hover{
 }
     </style>
 
+<div id='frame'>
 
    <div class="dropdown">
   <button onmouseover="document.getElementById('SoundEF')" class="button"
@@ -292,5 +293,6 @@ clickplay.volume = 1.00;
 clickplay.play();
 }
 </script>
+</div>
   </body>
 </html>
