--- a/static/TrainStation.html
+++ b/static/TrainStation.html
@@ -417,6 +417,9 @@ div#load_screen > div#loading{
         <img id="playericon" src="OperatorImages/Vial.png">
         <img class="player" id="PewDiePie" src="GameTextures/Op4Primary.png" onError="this.onerror=null;this.src='GameTextures/Op4Primary.png';" style="opacity:1.0;">
           <div id="shadowring"></div>
+          <div id="circle1"></div>
+        <div id="shadowring"></div>
+        <div id="circle2"></div>
           <canvas height="100" width="100" id="counter"></canvas>
           <canvas height="100" width="100" id="AmmoCounter"></canvas>
     </div>
