--- a/static/TrainStation.html
+++ b/static/TrainStation.html
@@ -407,7 +407,7 @@ div#load_screen > div#loading{
        window.location.href = "index.html";
        }
        time = time -1;
-       console.log(time);
+       //console.log(time);
        document.getElementById("InGameTimer").textContent=time;
        }
           </script>
