Did stuff to screen size and fixed glaze cookies

--- a/static/index.html
+++ b/static/index.html
@@ -110,6 +110,16 @@
   width: 20%;
 }
 
+#frame{
+  position: absolute;
+  margin: auto;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 1336px;
+  height: 768px;
+}
 
 /* span.psw {
   float: right;
