--- a/static/Barracks.html
+++ b/static/Barracks.html
@@ -18,7 +18,7 @@
 <meta name="msapplication-TileImage" content="GameIcons/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
       <title>Siege XY</title>
-      <body background = "MenuTextures/Barracks.jpg" >
+      <body background = "MenuTextures/Barracks.jpg">
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <script>
           (adsbygoogle = window.adsbygoogle || []).push({
@@ -1055,13 +1055,13 @@
     <div class="container">
     <div style="Position: absolute; left: 25%; " class="WeaponSquare">
         <div onclick="document.getElementById('PrimaryWeaponSlotGlaze').src='GameTextures/Vityaz-SN.png' , GlazePrimaryGun('Vityaz-SN') , document.getElementById('id0WGlaz').style.display='none'" style="position: absolute; border-style: solid; z-index: 2; border-color: #000000; opacity: 0.5; top: 20%; left: 9.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.0);"></div>
-        <div onclick="document.getElementById('PrimaryWeaponSlotGlaze').src='GameTextures/PM-84Glauberyt.png' , GlazePrimaryGun('PM-84Glauberyt') , document.getElementById('id0WGlaz').style.display='none'" style="position: absolute; border-style: solid; z-index: 2; border-color: #000000; opacity: 0.5; top: 50%; left: 9.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.0);"></div>
+        <div onclick="document.getElementById('PrimaryWeaponSlotGlaze').src='GameTextures/RMB-93.png' , GlazePrimaryGun('RMB-93') , document.getElementById('id0WGlaz').style.display='none'" style="position: absolute; border-style: solid; z-index: 2; border-color: #000000; opacity: 0.5; top: 50%; left: 9.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.0);"></div>
           <p style="position: absolute; top: 10%; left: 40%; font-size: 15;">Vityaz-SN</p>
-          <p style="position: absolute; top: 40%; left: 40%; font-size: 15;">PM-84 Glauberyt</p>
+          <p style="position: absolute; top: 40%; left: 40%; font-size: 15;">RMB-93</p>
         <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 20%; left: 9.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.4);"></div>
           <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 50%; left: 9.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.4);"></div>
       <img style=" position: absolute; top: 22%; left: 11%; width: 210px; height: 67px;" src="GameTextures/Vityaz-SN.png"></img>
-      <img style=" position: absolute; top: 52%; left: 11%; width: 210px; height: 67px;" srcset="GameTextures/PM-84Glauberyt.png"></img>
+      <img style=" position: absolute; top: 52%; left: 11%; width: 210px; height: 67px;" srcset="GameTextures/RMB-93.png"></img>
  </div>
  </div>
 </div>
