tryed to fix stuff

--- a/static/index.html
+++ b/static/index.html
@@ -31,20 +31,6 @@
         enable_page_level_ads: true
       });
     </script>
-
-<picture>
-  <source media="(min-width: 650px)" srcset="MenuTextures/SiegeXY.png">
-  <img  style="
-  position: absolute;
-  pointer-events: none;
-  top: 35%;
-  left: 48%;
-  margin-top: -220px;
-  margin-left: -180px;
-  width: 440px;
-  height: 360px;
-  "vsrc="MenuTextures/SiegeXY.png">
-</picture>
     </head>
  <body background = "MenuTextures/Background.jpg">
     <style>
@@ -180,6 +166,29 @@ modal:hover{
 }
     </style>
 
+    <a>
+    <img src="MenuTextures/SiegeXY.png" style="
+    position: absolute;
+    pointer-events: none;
+    top: 35%;
+    left: 48%;
+    margin-top: -220px;
+    margin-left: -180px;
+    width: 440px;
+    height: 360px;
+    "></img>
+    </a>
+
+    <a href="https://discord.gg/kDh6eQc" target="_blank">
+    <img src="MenuTextures/Discord-Logo.png" style="position: absolute; top: 87%; left: 1%;
+    width: 5.5%; height: 11%;"></img>
+    </a>
+
+    <a href="https://www.patreon.com/SiegeXY" target="_blank">
+    <img  src="MenuTextures/Support-Us.png" style="position: absolute; top: 87%; left: 6.5%;
+    width: 5.5%; height: 11%;"></img>
+    </a>
+
 <div id='frame'>
 
    <div class="dropdown">
@@ -242,15 +251,6 @@ modal:hover{
    <button style="position: absolute; top: 105%; left: 50%; margin-top: -10%;
    margin-left: -10%;
    width: 20%;">How To Play</button>
-   </a>
-   <a href="https://discord.gg/kDh6eQc" target="_blank">
-   <img src="MenuTextures/Discord-Logo.png" style="position: absolute; top: 87%; left: 1%;
-   width: 5.5%; height: 11%;"></img>
-   </a>
-
-   <a href="https://www.patreon.com/SiegeXY" target="_blank">
-   <img  src="MenuTextures/Support-Us.png" style="position: absolute; top: 87%; left: 6.5%;
-   width: 5.5%; height: 11%;"></img>
    </a>
 
 <div id="id01" class="modal">
