--- a/static/index.html
+++ b/static/index.html
@@ -22,6 +22,7 @@
     <meta charset="UTF-8">
     <title>Siege XY</title>
 
+
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -39,6 +40,7 @@
 
 .dropdown {
 }
+
 
 
 .dropdown-content {
@@ -75,16 +77,18 @@
   padding: 14px 20px;
   margin: auto;
   border: none;
-  cursor: pointer;
   width: 20%;
   position: absolute;
 }
     button:hover {
     opacity: 0.8;
+    cursor: url(Cursors/FAarrow.cur),default;
     }
 
     picture:hover{
     }
+
+      *{cursor: url(Cursors/FAarrow.cur),default;}
 
     .cancelbtn {
   background-color: #404040;
@@ -92,7 +96,6 @@
   padding: 14px 20px;
   margin: 8px 0;
   border: none;
-  cursor: pointer;
   width: 20%;
 }
 
