--- a/static/TrainStation.html
+++ b/static/TrainStation.html
@@ -21,6 +21,8 @@
 <meta name="viewport" content= "width=device-width, user-scalable=no">
 <link href="main.css" rel="stylesheet"/>
       <script type="text/javascript" src="colyseus.js"></script>
+      <script src="howler.js"></script>
+      <script src="howler.spatial.js"></script>
 
     <style>
 div#load_screen{
