--- a/static/CasualAttacker.html
+++ b/static/CasualAttacker.html
@@ -194,7 +194,7 @@ window.addEventListener("load", function(){
   <img onmouseover="document.getElementById('id04').style.display='block'" onmouseout="document.getElementById('id04').style.display='none'" srcset="OperatorImages/Tortue.png"  style="position: absolute; top: 38%;  left: 50%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Tortue.png">
 </a>
 
-<a href="TrainStation.html?op=PewDiePie">
+<a href="TrainStation.html?op=Pewdiepie">
   <img onmouseover="document.getElementById('id02').style.display='block'" onmouseout="document.getElementById('id02').style.display='none'" srcset="OperatorImages/Pewdiepie.png" style="position: absolute; top: 38%;  left: 57%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Pewdiepie.png">
 </a>
 
