--- a/static/TrainStation.html
+++ b/static/TrainStation.html
@@ -210,7 +210,6 @@ div#load_screen > div#loading{
        top:75%;
        left:93%;
        opacity:0.7;
-       border-radius: 50%;
       }
       #playericon{
        position: absolute;
@@ -416,6 +415,7 @@ div#load_screen > div#loading{
           <p id="InGameTimer" style=" pointer-events: none; user-select:none; position: absolute; top:5%; color: white; font-size: 55; left:50%; margin-top: -25px; margin-left: -25px;width: 50px;height: 50px; text-align: center;"></p>
         <div id="hud"></div>
         <img id="minimap" src="GameTextures/Train Station34.png" alt="Minimap">
+        <div id="miniplayer" style="border-radius: 50%; background-color: #e50606; position: absolute; left: 0; top: 0; width: 3px; height: 3px;"></div>
         <img id="playericon" src="OperatorImages/Vial.png">
         <img class="player" id="PewDiePie" src="GameTextures/Op4Primary.png" onError="this.onerror=null;this.src='GameTextures/Op4Primary.png';" style="opacity:1.0;">
           <div id="shadowring"></div>
